# Karaoke

./: .gitignore  README.md  pubspec.yaml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/audio_player/app/: main.cpp  ogg_play.hpp  ogg_play_advanced.cpp  ogg_play_basic.cpp
android/app/src/main/cpp/audio_player/audioplayer/: audio_layer.hpp  audio_layer_factory.cpp  audio_layer_factory.hpp  audio_player.cpp  audio_player.hpp  audio_player_types.hpp  audio_session.cpp  audio_session.hpp  audio_session_ogg.cpp  audio_session_ogg_analyze.cpp  audio_session_ogg_play.cpp  audio_session_ogg_seek.cpp  audio_session_resample.cpp  common.hpp  error_code.cpp  error_code.hpp  oboe_layer.cpp  oboe_layer.hpp  opus_types.hpp  ring_buffer.cpp  ring_buffer.hpp  thread_pool.cpp  thread_pool.hpp
android/app/src/main/cpp/karaoke/: android_karaoke.cpp  android_karaoke.hpp  android_mic_player.cpp  android_mic_player.hpp  export.cpp  ios_karaoke.cpp  ios_karaoke.hpp  ios_mic_player.cpp  ios_mic_player.hpp  karaoke_factory.cpp  karaoke_factory.hpp  pitch_processor.cpp  pitch_processor.hpp  reverb_processor.cpp  reverb_processor.hpp
android/app/src/main/cpp/oboe/: CMakeLists.txt
android/app/src/main/cpp/oboe/include/oboe/: AudioClock.h  AudioStream.h  AudioStreamBase.h  AudioStreamBuilder.h  AudioStreamCallback.h  Definitions.h  FifoBuffer.h  FifoControllerBase.h  FullDuplexStream.h  LatencyTuner.h  Oboe.h  OboeExtensions.h  ResultWithValue.h  StabilizedCallback.h  Utilities.h  (+1 more)
android/app/src/main/cpp/ogg/: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  appveyor.yml  autogen.sh  releases.sha2
android/app/src/main/cpp/opus/: .gitlab-ci.yml  CMakeLists.txt  Makefile.am  Makefile.mips  Makefile.unix  README  autogen.sh  celt_headers.mk  celt_sources.mk  configure.ac  lpcnet_headers.mk  lpcnet_sources.mk  meson.build  meson_options.txt  opus.m4  opus_headers.mk  opus_sources.mk  releases.sha2  silk_sources.mk  tar_list.txt
android/app/src/main/cpp/opus/celt/: _kiss_fft_guts.h  arch.h  bands.c  bands.h  celt.c  celt.h  celt_decoder.c  celt_encoder.c  celt_lpc.c  celt_lpc.h  cpu_support.h  entdec.c  entdec.h  entenc.c  entenc.h  fixed_debug.h  fixed_generic.h  float_cast.h  kiss_fft.c  kiss_fft.h  laplace.c  laplace.h  mathops.c  mathops.h  mdct.c  mdct.h  meson.build  modes.c  modes.h  opus_custom_demo.c  os_support.h  pitch.c  pitch.h  quant_bands.c  quant_bands.h  rate.c  stack_alloc.h  static_modes_fixed.h  vq.c  vq.h
android/app/src/main/cpp/opus/cmake/: OpusConfig.cmake  OpusFunctions.cmake  OpusSources.cmake  README.md  cpu_info_by_asm.c  cpu_info_by_c.c
android/app/src/main/cpp/opus/dnn/: LPCNet.yml  README.md  adaconvtest.c  burg.c  burg.h  common.h  datasets.txt  download_model.sh  dred_coding.c  dred_coding.h  dred_config.h  dred_decoder.c  dred_decoder.h  dred_encoder.c  dred_encoder.h  dred_rdovae.h  dred_rdovae_dec.c  dred_rdovae_dec.h  dred_rdovae_enc.c  dred_rdovae_enc.h  dump_data.c  dump_lpcnet_tables.c  fargan.c  fargan.h  fargan_demo.c  freq.c  freq.h  fwgan.c  fwgan.h  kiss99.c  kiss99.h  lossgen.c  lossgen.h  lossgen_demo.c  lpcnet.c  lpcnet.h  lpcnet_enc.c  lpcnet_plc.c  lpcnet_private.h  lpcnet_tables.c  (+22 more)
android/app/src/main/cpp/opus/doc/: build_isobmff.sh  draft-ietf-codec-opus-update.xml  opus_in_isobmff.html  release.txt
android/app/src/main/cpp/opus/include/: opus.h  opus_custom.h  opus_multistream.h  opus_projection.h
android/app/src/main/cpp/opus/meson/: README.md  get-version.py
android/app/src/main/cpp/opus/scripts/: local_build.py  shrink_model.sh
android/app/src/main/cpp/opus/silk/: API.h  MacroDebug.h  NSQ.c  NSQ_del_dec.c  PLC.c  PLC.h  SigProc_FIX.h  VQ_WMat_EC.c  control.h  control_codec.c  debug.c  dec_API.c  decode_frame.c  enc_API.c  init_decoder.c  init_encoder.c  main.h  meson.build  stereo_LR_to_MS.c  stereo_MS_to_LR.c  structs.h
android/app/src/main/cpp/opus/src/: analysis.c  extensions.c  mapping_matrix.c  mapping_matrix.h  meson.build  mlp.c  mlp.h  mlp_data.c  opus.c  opus_decoder.c  opus_demo.c  opus_encoder.c  opus_multistream_decoder.c  opus_multistream_encoder.c  opus_private.h  opus_projection_decoder.c  opus_projection_encoder.c  repacketizer.c
android/app/src/main/cpp/opus/tests/: meson.build  opus_build_test.sh  opus_encode_regressions.c  random_config.sh  test_opus_api.c  test_opus_common.h  test_opus_custom.c  test_opus_decode.c  test_opus_dred.c  test_opus_encode.c  test_opus_extensions.c  test_opus_padding.c  test_opus_projection.c
android/app/src/main/cpp/recorder/: ios_recorder.cpp  main.cpp  oboe_recorder.cpp  opus_encoder.cpp  recorder_interface.cpp
android/app/src/main/cpp/rubberband/: .build.yml  .hg_archival.txt  .hgignore  .hgtags  CHANGELOG  CMakeLists.txt  COMPILING.md  CONTRIBUTING.md  COPYING  Doxyfile  meson.build  meson_options.txt  rubberband.pc.in
android/app/src/main/cpp/rubberband/cross/: ios-simulator.txt  ios.txt  macos-arm64.txt  macos-universal.txt  macos-x86_64.txt  windows-cl.txt  windows-clang.txt
android/app/src/main/cpp/rubberband/dotnet/: README.md
android/app/src/main/cpp/rubberband/ladspa-lv2/: RubberBandLivePitchShifter.cpp  RubberBandLivePitchShifter.h  RubberBandPitchShifter.cpp  RubberBandPitchShifter.h  RubberBandR3PitchShifter.cpp  RubberBandR3PitchShifter.h  ladspa-plugin.list  ladspa-plugin.map  ladspa-rubberband.cat  ladspa-rubberband.rdf  libmain-ladspa.cpp  libmain-lv2.cpp  lv2-plugin.list  lv2-plugin.map
android/app/src/main/cpp/rubberband/main/: main.cpp
android/app/src/main/cpp/rubberband/otherbuilds/: Android.mk  Makefile.ios  Makefile.linux  Makefile.macos  Makefile.macos-universal  check.sh
android/app/src/main/cpp/rubberband/rubberband/: RubberBandLiveShifter.h  RubberBandStretcher.h  rubberband-c.h
android/app/src/main/cpp/rubberband/single/: RubberBandSingle.cpp
android/app/src/main/cpp/rubberband/src/: RubberBandLiveShifter.cpp  RubberBandStretcher.cpp  rubberband-c.cpp
android/app/src/main/cpp/rubberband/vamp/: RubberBandVampPlugin.cpp  RubberBandVampPlugin.h  libmain.cpp  vamp-plugin.list  vamp-plugin.map  vamp-rubberband.cat
(+538 files in other folders)
